--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "cloudinary": "^2.7.0",
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
-    "firebase-admin": "^13.4.0"
+    "firebase-admin": "^13.4.0",
+    "mongoose": "^8.16.3"
   }
 }
