--- a/backend/package.json
+++ b/backend/package.json
@@ -14,7 +14,10 @@
     "cloudinary": "^2.7.0",
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
+    "firebase": "^11.10.0",
     "firebase-admin": "^13.4.0",
-    "mongoose": "^8.16.3"
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.16.3",
+    "multer": "^2.0.1"
   }
 }
